<resources>
    <string name="app_name">EcoSnap</string>
    <string name="Michigan">Michigan</string>
    <string name="homepage">Homepage</string>
    <string name="map">Map</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="Home">Home</string>
    <string name="HomeBody">Welcome to EcoSnap! Recycle and compete with your friends to see who is the best contributor to the environment! The application comes with four buttons: home, camera, profile, and leaderboard. The home button takes you to the homepage where as the camera button allows for you to take a picture of any item and determine whether it is recyclable or not. Create an account and view your profile details within profile and track your friends\' stats within the leaderboard page! Have fun recycling and engage in the competition!</string>
    <string name="snap">Snap!</string>
    <string name="back_to_homepage">Back to Homepage</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Don\'t have an account? Create One</string>
    <string name="button">Button</string>
    <string name="username_welcome">Welcome, %1$s!</string>
    <string name="recycle_count">You have recycled a total of %1$d items!</string>
    <string name="stats_text">Your stats</string>
    <string name="goals_text">Your goals</string>
    <string name="Record">Record</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="logout">Logout</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="set_your_goal">Set your goal</string>
    <string name="save_goal">Save Goal</string>
    <string name="toggle_menu">Toggle Menu</string>
    <string name="password_must_be_6_characters_or_more">Password must be 6 characters or more</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
</resources>