<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".Profile">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <TextView
            android:id="@+id/recycle_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="301dp"
            android:layout_marginBottom="306dp"
            android:text="@string/recycle_count"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <TextView
            android:id="@+id/username_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/username_welcome"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />




        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="219dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.227"
            />




        <androidx.cardview.widget.CardView
            android:id="@+id/stats_card"
            android:layout_width="150dp"
            android:layout_height="148dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/goals_card"
            app:layout_constraintVertical_bias="0.0">




            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/stats_text"
                android:textSize="34sp" />
        </androidx.cardview.widget.CardView>










        <androidx.cardview.widget.CardView
            android:id="@+id/goals_card"
            android:layout_width="150dp"
            android:layout_height="148dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/stats_card"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.725">


            <EditText
                android:id="@+id/goalEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your goal"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="16sp" />


            <Button
                android:id="@+id/saveGoalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save Goal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"/>


        </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
